[gd_scene load_steps=4 format=3 uid="uid://c7etkj4myo7kn"]

[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="1_iplnd"]
[ext_resource type="Theme" uid="uid://dgxt0xkl1qxl5" path="res://scenes/ui/UI.theme" id="1_m4t6q"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu.gd" id="2_nakdq"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m4t6q")
script = ExtResource("2_nakdq")

[node name="SlideoutMenu" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iplnd")
slide_duration = 0.5
transition_type = 4
ease_type = 2

[node name="ButtonsPanel" type="PanelContainer" parent="SlideoutMenu"]
layout_mode = 2
theme_type_variation = &"TranslucentPanelContainer"

[node name="VButtons" type="VBoxContainer" parent="SlideoutMenu/ButtonsPanel"]
layout_mode = 2

[node name="BTN_Resume" type="Button" parent="SlideoutMenu/ButtonsPanel/VButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Back to Work"

[node name="BTN_Options" type="Button" parent="SlideoutMenu/ButtonsPanel/VButtons"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="SlideoutMenu/ButtonsPanel/VButtons"]
layout_mode = 2
text = "I Quit"

[connection signal="pressed" from="SlideoutMenu/ButtonsPanel/VButtons/BTN_Resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="SlideoutMenu/ButtonsPanel/VButtons/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="SlideoutMenu/ButtonsPanel/VButtons/BTN_Quit" to="." method="_on_btn_quit_pressed"]
